Bug 416964 - "AutoSkip" is not a word and the button's functionality is unclear
Summary: "AutoSkip" is not a word and the button's functionality is unclear
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-01-30 22:20 UTC by Patrick Silva
Modified: 2020-02-11 21:31 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.68
Sentry Crash Report:


Attachments
screenshot (21.63 KB, image/png)
2020-01-30 22:20 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-01-30 22:20:01 UTC
Created attachment 125557 [details]
screenshot

SUMMARY
See the attached screenshot.
Current label looks weird without a space before a uppercase character.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.67.0
Qt Version: 5.13.2
Comment 1 Nate Graham 2020-01-31 00:04:43 UTC
Yeah. What does the "AutoSkip" behavior even do? It's not at all obvious.
Comment 2 Patrick Silva 2020-01-31 00:07:22 UTC
(In reply to Nate Graham from comment #1)
> Yeah. What does the "AutoSkip" behavior even do? It's not at all obvious.

I do not know either.
Comment 3 Kai Uwe Broulik 2020-01-31 08:20:38 UTC
I *think* it skips every subsequent failure instead of asking again.
Probably "Skip All" is what it should be labeled?
Comment 4 Nate Graham 2020-01-31 13:50:24 UTC
Ah yes, looks like it.

https://phabricator.kde.org/D27067
Comment 5 Nate Graham 2020-02-07 13:26:32 UTC
Git commit 2c84f4b1c8fb688608fcf627c03bbc8c5cf66f11 by Nate Graham.
Committed on 07/02/2020 at 13:26.
Pushed by ngraham into branch 'master'.

Change "AutoSkip" to "Skip All"

Summary:
"AutoSkip" is not a word and makes it unclear what the button actually does.
FIXED-IN: 5.68

Reviewers: #frameworks, #vdg, dfaure, apol

Reviewed By: apol

Subscribers: broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D27067

M  +1    -1    src/widgets/skipdialog.cpp

https://commits.kde.org/kio/2c84f4b1c8fb688608fcf627c03bbc8c5cf66f11
Comment 6 S 2020-02-10 01:27:03 UTC
Thank you for changing this! You know, after many years, I've always pressed the "AutoSkip" button with trepidation, because I never really understood what it was going to do. "Skip All" eliminates the ambiguity. 😃
Comment 7 Nate Graham 2020-02-10 04:35:52 UTC
You're very welcome. :)

That's the power of bug reporting! No need to suffer for years; just file a bug and someone might fix your issue within a week. :)
Comment 8 S 2020-02-10 13:13:32 UTC
(In reply to Nate Graham from comment #7)

> That's the power of bug reporting! No need to suffer for years; just file a
> bug and someone might fix your issue within a week. :)

Right, it was just one of those UI papercuts that I had only noticed subconsciously and never really thought about it unless the error dialogue popped up, at which point I usually was worried about my files not transferring correctly or whatever, so I never realized it needed to be fixed until you fixed it. :-P Cheers for your great work.
Comment 9 Nate Graham 2020-02-11 21:31:30 UTC
Aww, thanks so much for sharing the love!