Change "AutoSkip" to "Skip All"

Summary:
"AutoSkip" is not a word and makes it unclear what the button actually does.

BUG: 416964
FIXED-IN: 5.68

Reviewers: #frameworks, #vdg, dfaure, apol

Reviewed By: apol

Subscribers: broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D27067